tests/ui/inference/need_type_info/issue-109905.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-109905.rs:13:5
   |
LL |     <() as Trait<'static, _>>::m(());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the trait `Trait`

error[E0282]: type annotations needed
  --> $DIR/issue-109905.rs:20:5
   |
LL |     Trait::<'static, _>::m(());
   |     ^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the trait `Trait`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
